# rest-client

./: CHANGELOG.md  Cargo.toml
examples/: pagination.rs
examples/pagination/: Cargo.toml
examples/pagination/src/: helpers.rs  main.rs
src/: client.rs  lib.rs  pagination.rs  request.rs
tests/integration/: data.rs  empty_response.rs  errors.rs  main.rs  multiple_queries.rs  pagination.rs  query.rs
tests/integration/authentication/: basic.rs  bearer.rs  header.rs  mod.rs  query.rs
tests/integration/authorization/: basic.rs  bearer.rs  header.rs  query.rs
tests/integration/utils/: mod.rs
