[workspace]
members = [".", "examples/pagination"]
default-members = [".", "examples/pagination"]

[package]
name = "rest-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
