[package]
name = "rest-client"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
serde_json = "1.0"
stream-flatten-iters = { version = "0.2.0", optional = true }
thiserror = "1.0"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"], optional = true }

[features]
default = []
examples = ["serde/derive", "stream-flatten-iters", "tokio"]

[[example]]
name = "pagination"
required-features = ["examples"]
